# SymptomSentinelAI

./: .replit  README.md  app.js  basic-html-server.js  basic-server.js  direct-server.js  express-test-server.js  index.html  index.js  mini-server.js  minimal-http.js  minimal-server.js  package-lock.json  package.json  pyproject.toml  register-test-user.js  replit-compatible-server.js  replit-express-server.js  replit-server.js  replit.nix  run-all-tests.js  run-app.js  server.js  simple-server.js  simple-test-server.js  simple-test.js  test-server.js  ultra-minimal-server.js
backend/: clear-all-users.js  create-premium-test-user.js  create-test-user.js  debug-symptom-assess.js  knexfile.js  server.js  test-analysis-endpoint.js  test-api.js  test-auth-endpoints.js  test-enhanced-bridge.js  test-get-analysis.js  test-guid.txt  test-login.js  test-package.json  test-symptom-assessment.js  test-user-registration.js
backend/controllers/: adminController.js  imageAnalysisController.js  imageUploadController.js  symptomAssessmentController.js  userController.js  userController.js.bak
backend/db/: db.js  knex.js
backend/middleware/: auth.js
backend/ml/: README.md  (+13 more)
docs/: analysis-history-api.md  ios-api-integration.md  ios-model-implementation.md
frontend/: admin-tools.html  api-tester.html  app.js  auth-state.js  authManager.js  direct-tester.html  fix-auth-modal.html  index.html  package.json  resetAuth.js  server.js  setupProxy.js  simple-test.html  styles.css  test-api-proxy.js  test-auth-manager.js  test-image-analysis.js  utils.js
public/: index.html
(+142 files in other folders)
